--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432123/swaqwep
+spring.datasource.url=jdbc:postgresql://localhost:5432/swap
 spring.datasource.username=postgres
 spring.datasource.password=qwestart
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
